src/objects/Sales_Order__c.object
<CustomObject>
    <fields>
        <fullName>ArcGIS_Engine_10X__c</fullName>
        <label>ArcGIS Engine 10X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ArcGIS_Run_Time__c</fullName>
        <label>ArcGIS Run Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ArcGIS_Server_Network_Analyst__c</fullName>
        <label>ArcGIS Server (Network Analyst)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonds_L_C__c</fullName>
        <label>Bonds &amp; L/C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonds__c</fullName>
        <label>Bonds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Date__c</fullName>
        <label>Bookings Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CAD_Interface_List__c</fullName>
        <label>CAD Interface List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAD_Software_List__c</fullName>
        <label>CAD Software List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAD_Software__c</fullName>
        <label>CAD Software</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSL__c</fullName>
        <label>CSL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_or_N__c</fullName>
        <formula>If(Related_Opportunity__r.RecordType.DeveloperName = &apos;TriTech_Competitive&apos;,&apos;C&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C or N</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Order_Number__c</fullName>
        <label>Change Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissionable_Value__c</fullName>
        <formula>( Scott_Test__c +  Services_Total__c +  Discount_Other__c + HW_3rd_party_SW_Subtotal__c +  Shipping__c +  Travel_Fixed__c +  Other_Total__c +  Software_Support__c +  Tritech_Com_IQ_Hosting__c +  Tritech_Com_Other__c +  Tritech_Com_Install__c +  Tritech_Com_Training__c +  Tritech_Com_Discount__c +  Travel_BAI__c) +
If( Bonds_L_C__c &gt; 0, Discount_Other__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commissionable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Worksheet_Other__c</fullName>
        <label>Cost Worksheet Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Datavault_List__c</fullName>
        <label>Datavault List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Datavault_Subscription__c</fullName>
        <label>Datavault Subscription</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <formula>Related_Opportunity__r.Owner.Manager.FirstName + &apos; &apos; + Related_Opportunity__r.Owner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Other__c</fullName>
        <label>Discount Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dundas_Analytics__c</fullName>
        <formula>Dundas__c * 1700</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dundas Analytics</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dundas__c</fullName>
        <label>Dundas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESRI__c</fullName>
        <formula>(MO_Upgrade__c * 40) + ( ArcGIS_Run_Time__c * 100) + ( ArcGIS_Engine_10X__c * 71) + ( ArcGIS_Engine_10X__c * 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ESRI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Escrow__c</fullName>
        <label>Escrow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FBR_List__c</fullName>
        <label>FBR List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FBR_Software__c</fullName>
        <label>FBR Software</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_List__c</fullName>
        <label>Fire List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Services__c</fullName>
        <label>Fire Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Software__c</fullName>
        <label>Fire Software</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GP_Customer_ID__c</fullName>
        <label>GP Customer ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G_or_C__c</fullName>
        <label>G or C</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW_3rd_Paty_List__c</fullName>
        <formula>Hardware_List__c +  Hardware_Support_List__c + X3rd_Party_Soft_List__c +  Subcontract_List__c +  Subcontract_Support_List__c +  Datavault_List__c +  SI_List__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HW 3rd Party List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HW_3rd_party_SW_Subtotal__c</fullName>
        <formula>Hardware_3rd_Party__c +  Hardware_3rd_Party_Support__c +  X3rd_Party_Software__c +  X3rd_Party_Support__c +  Subcontract__c +  Subcontract_Support__c +  Datavault_Subscription__c +  System_Integration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HW, 3rd party SW Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hardware_3rd_Party_Support__c</fullName>
        <label>Hardware/3rd Party Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hardware_3rd_Party__c</fullName>
        <label>Hardware/3rd Party</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hardware_3rd_party_Discount__c</fullName>
        <formula>HW_3rd_Paty_List__c -  HW_3rd_party_SW_Subtotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hardware/3rd Party Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hardware_List__c</fullName>
        <label>Hardware List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hardware_Support_List__c</fullName>
        <label>Hardware Support List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IQ_Licenses__c</fullName>
        <label>IQ Licenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IQ_List__c</fullName>
        <label>IQ List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_Services_List__c</fullName>
        <label>IS Services List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_Services__c</fullName>
        <label>IS Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inform_Bookings_Amount__c</fullName>
        <label>Inform Bookings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interface_CAD_Mobile_Software__c</fullName>
        <label>Interface CAD/Mobile Software</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interface_RMS_FBR_Jail_Software__c</fullName>
        <label>Interface RMS/FBR/Jail Software</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jail_List__c</fullName>
        <label>Jail List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jail_Software__c</fullName>
        <label>Jail Software</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MO_Upgrade__c</fullName>
        <label>MO Upgrade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MO__c</fullName>
        <label>MO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_List__c</fullName>
        <label>Mobile List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Software__c</fullName>
        <label>Mobile Software</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NE__c</fullName>
        <label>NE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_E__c</fullName>
        <label>N/E</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Related_Opportunity__r.Opportunity_Owner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Deferred_Rev__c</fullName>
        <label>Other Deferred Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Services__c</fullName>
        <label>Other Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Total__c</fullName>
        <formula>Bonds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Services_List__c</fullName>
        <label>PM Services List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Services__c</fullName>
        <formula>((  CAD_Software__c +  FBR_Software__c +  Interface_CAD_Mobile_Software__c +  Interface_RMS_FBR_Jail_Software__c +  Fire_Software__c +  IQ_Licenses__c +  Jail_Software__c +  Mobile_Software__c +  RMS_Software__c +  Telephony_911__c +  Subscp_RMS_FBR__c +  Software_Subscription_On_Prem__c  +  PandI_Services__c +  IS_Services__c +  Training_Services__c +  Other_Services__c ) * 14)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P_I_List__c</fullName>
        <label>P&amp;I List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PandI_Services__c</fullName>
        <label>P&amp;I Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Possitive_Access__c</fullName>
        <label>Positive Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prepain_maintenance_Pool__c</fullName>
        <label>Prepaid Maintenance Pool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number - Click to View Sales Order</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMS_Interface_List__c</fullName>
        <label>RMS Interface List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMS_List__c</fullName>
        <label>RMS List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMS_Software__c</fullName>
        <label>RMS Software</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMS_Subscription__c</fullName>
        <label>RMS Subscription</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Sales_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <formula>Tritech_Com_Net__c + Tax__c + Other_Deferred_Rev__c + Prepain_maintenance_Pool__c + Software_Support__c + Other_Total__c + HW_3rd_party_SW_Subtotal__c
+ Services_Total__c + 	Scott_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SI_List__c</fullName>
        <label>SI List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <label>Sales Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scott_Test__c</fullName>
        <formula>CAD_Software__c +  FBR_Software__c +  Fire_Software__c +  Interface_CAD_Mobile_Software__c +  Interface_RMS_FBR_Jail_Software__c +  IQ_Licenses__c +
 Jail_Software__c +  Mobile_Software__c +  RMS_Software__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Software Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Discount__c</fullName>
        <formula>Services_List__c -  Services_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_List__c</fullName>
        <formula>P_I_List__c +  IS_Services_List__c +  Training_Services_List__c +  PM_Services__c + Other_Services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_Total__c</fullName>
        <formula>PandI_Services__c +  IS_Services__c +  Training_Services__c + PM_Services__c + Other_Services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Software_Discount__c</fullName>
        <formula>Software_List__c -  Scott_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Software Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Software_Discounts__c</fullName>
        <label>Software Discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Software_List__c</fullName>
        <formula>CAD_Software_List__c +  CAD_Interface_List__c +  RMS_Interface_List__c +  Mobile_List__c +  RMS_List__c +  FBR_List__c +  Fire_List__c +  Jail_List__c +  Subscription_List__c +  IQ_List__c +  Telephony_List__c + Subscription_List__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Software List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Software_Subscription_On_Prem__c</fullName>
        <label>Software Subscription (On Prem)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Software_Subtotal__c</fullName>
        <label>Software Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Software_Support__c</fullName>
        <label>Software Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Software_Total__c</fullName>
        <formula>Software_List__c  -  Software_Discounts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Software Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subcontract_List__c</fullName>
        <label>Subcontract  List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subcontract_Support_List__c</fullName>
        <label>Subcontract Support List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subcontract_Support__c</fullName>
        <label>Subcontract Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subcontract__c</fullName>
        <label>Subcontract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscp_RMS_FBR__c</fullName>
        <label>Subscp - RMS/FBR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_List__c</fullName>
        <label>Subscription List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Integration__c</fullName>
        <label>System Integration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <formula>Related_Opportunity__r.Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telephony_911__c</fullName>
        <label>Telephony 911</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Telephony_List__c</fullName>
        <label>Telephony List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Amount__c</fullName>
        <label>Total Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Dundas_Analytics__c +  Possitive_Access__c +  ESRI__c +  Cost_Worksheet_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other__c</fullName>
        <formula>Shipping__c +  Escrow__c +  TriCon_Fees__c +  Bonds_L_C__c +  Travel_BAI__c +  Travel_Fixed__c +  Other__c +  Discount_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Services_List__c</fullName>
        <label>Training Services List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Services__c</fullName>
        <label>Training Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_BAI__c</fullName>
        <label>Travel - BAI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Fixed__c</fullName>
        <label>Travel - Fixed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TriCon_Fees__c</fullName>
        <label>TriCON Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tritech_Com_Cont_2_Yrs_List__c</fullName>
        <label>TriTech.com Cont &gt; 2 Yrs List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tritech_Com_Cont_2_Yrs__c</fullName>
        <label>TriTech.com Cont &gt; 2 Yrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tritech_Com_Discount__c</fullName>
        <formula>Tritech_Com_List__c -  Tritech_Com_Net__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TriTech.com Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tritech_Com_IQ_Hosting_List__c</fullName>
        <label>TriTech.com IQ Hosting List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tritech_Com_IQ_Hosting__c</fullName>
        <label>TriTech.com IQ Hosting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tritech_Com_Install_List__c</fullName>
        <label>TriTech.com Install List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tritech_Com_Install__c</fullName>
        <label>TriTech.com Install</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tritech_Com_List__c</fullName>
        <formula>Tritech_Com_Cont_2_Yrs_List__c +  Tritech_Com_Install_List__c +  Tritech_Com_IQ_Hosting_List__c +  Tritech_Com_Other_List__c +  Tritech_Com_Training_List__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TriTech.com List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tritech_Com_Net__c</fullName>
        <formula>Tritech_Com_IQ_Hosting__c +  Tritech_Com_Cont_2_Yrs__c +  Tritech_Com_Other__c +  Tritech_Com_Install__c +  Tritech_Com_Training__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TriTech.com Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tritech_Com_Other_List__c</fullName>
        <label>TriTech.com Other List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tritech_Com_Other__c</fullName>
        <label>TriTech.com Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tritech_Com_Training_List__c</fullName>
        <label>TriTech.com Training List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tritech_Com_Training__c</fullName>
        <label>TriTech.com Training</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Soft_List__c</fullName>
        <label>3rd Party Software List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Software__c</fullName>
        <label>3rd Party Software</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Support__c</fullName>
        <label>3rd Party Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X911_Services__c</fullName>
        <label>911 Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Sales Order Log</label>
    <nameField>
        <label>Sales Order Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>